[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Ending.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Fonts/DancingScript-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="Ending" type="Node2D"]
script = ExtResource( 1 )

[node name="Conclusion" type="Label" parent="."]
margin_left = 328.0
margin_top = 45.0
margin_right = 823.0
margin_bottom = 639.0
custom_fonts/font = SubResource( 1 )
text = "I’m not sure what my name is, but I still want to thank you anyway. I don’t recall much at all, but I know my life was a good one. I believe I had a beautiful family, caring friends…
I don’t think I could ask for more. See you soon.
Anne
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conclusion2" type="Label" parent="."]
margin_left = 328.0
margin_top = 45.0
margin_right = 823.0
margin_bottom = 639.0
custom_fonts/font = SubResource( 1 )
text = "I’m not sure what my name is, but I still want to thank you anyway. I don’t recall much at all, but I know my life was a good one. I believe I had a beautiful family, caring friends…
I don’t think I could ask for more. See you soon.
Anne
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conclusion3" type="Label" parent="."]
margin_left = 328.0
margin_top = 45.0
margin_right = 823.0
margin_bottom = 639.0
custom_fonts/font = SubResource( 1 )
text = "I’m not sure what my name is, but I still want to thank you anyway. I don’t recall much at all, but I know my life was a good one. I believe I had a beautiful family, caring friends…
I don’t think I could ask for more. See you soon.
Anne
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
margin_left = 1189.37
margin_top = 622.401
margin_right = 1261.37
margin_bottom = 690.401
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
